Small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>olá alex!</title>
+	<title>Hello Alex!</title>
 </head>
 <body>
-<h1>olá alexander!</h1>
+<h1>Hello Alexander! It's a grat course!</h1>
 </body>
 </html>
